--- a/loginScreen.html
+++ b/loginScreen.html
@@ -51,7 +51,7 @@
         }
 
         .error-message {
-            color: red;
+            color: pink;
             margin-top: 10px;
             display: none;
         }
